arpa/inet.h: Define htonl &c. under _POSIX_C_SOURCE >= 200112L too.

These do not require _XOPEN_SOURCE as of POSIX 2001:

https://pubs.opengroup.org/onlinepubs/009696799/functions/htonl.html

XXX Since this change is actually sys/endian.h, in principle it might
bleed into header files than just arpa/inet.h.  But sys/endian.h is
not used by anything that looks especially risky to me.

PR standards/57806: #include <arpa/inet.h> fails to define
htonl/htons/ntohl/ntohs under _POSIX_C_SOURCE=200809L